--- a/public/q3.html
+++ b/public/q3.html
@@ -60,8 +60,8 @@
 
     </div>
 
-    <script src="lib/js/head.min.js"></script>
-    <script src="js/reveal.min.js"></script>
+    <script src="javascript/library/reveal/lib/js/head.min.js"></script>
+    <script src="javascript/library/reveal/js/reveal.min.js"></script>
 
     <script>
 
