--- a/public/q3.html
+++ b/public/q3.html
@@ -45,11 +45,39 @@
         <section>
           <h2>Q2 Review</h2>
           <ol>
-            <li>One is smaller than...</li>
-            <li>Two is smaller than...</li>
-            <li>Three!</li>
+             <li>（未完成）招募新人一名</li>
+             <li>（完成初版）相似音樂功能上線</li>
+             <li>（完成）Google Account 登入 iNDIEVOX 功能</li>
+             <li>（完成）ibon 機台售票上線</li>
+             <li>（完成）The Wall 活動 API 串接</li>
+             <li>（完成）實作 Open API 管理介面，便於與外界串接合作</li>
+             <li>（完成）票務中心電子票券 API 規劃</li>
+             <li>（完成）個人頁面版面改版</li>
+             <li>（完成）Facebook Open Graph 串接上線</li>
+             <li>（完成）Elasticsearch Solution 架構規劃及進階功能應用於 iNDIEVOX Event Search</li>
+             <li>（完成）歌曲擁有者下載、置換音樂檔的功能</li>
+             <li>（完成）資料庫安全性提升</li>
+             <li>（完成）開啓 SSL 連線</li>
+             <li>（完成）iPhone App 改版（加入粉絲頁)</li>
           </ol>
         </section>
+
+        <section>
+            <h2>Q3 Preview</h2>
+            <ol>
+               <li>招募新人一名</li>
+               <li>相似音樂功能上線</li>
+               <li>電子票券上線</li>
+               <li>香港貨幣上線</li>
+               <li>永豐信用卡金流串接</li>
+               <li>音樂購買可同步檔案至 dropbox</li>
+               <li>音樂購買可同步檔案至 liuda</li>
+               <li>劃位功能上線</li>
+               <li>主網站版面改版</li>
+               <li>嘗試搬服務到AWS</li>
+               <li>iPhone App 改版（加入信用卡購票）</li>
+            </ol>
+          </section>
 
         <section>
           <h1>THE END</h1>
