--- a/public/q3.html
+++ b/public/q3.html
@@ -54,7 +54,7 @@
              <li>（完成）票務中心電子票券 API 規劃</li>
              <li>（完成）個人頁面版面改版</li>
              <li>（完成）Facebook Open Graph 串接上線</li>
-             <li>（完成）Elasticsearch Solution 架構規劃及進階功能應用於 iNDIEVOX Event Search</li>
+             <li>（完成）Elasticsearch 應用於 Event Search</li>
              <li>（完成）歌曲擁有者下載、置換音樂檔的功能</li>
              <li>（完成）資料庫安全性提升</li>
              <li>（完成）開啓 SSL 連線</li>
