--- a/public/javascript/jquery.texthighlighter/demos/callbacks.html
+++ b/public/javascript/jquery.texthighlighter/demos/callbacks.html
@@ -110,13 +110,13 @@
 
           $('#sandbox').textHighlighter({
               onRemoveHighlight: function(highlight) {
-                  return confirm('Do you really want to remove this highlight: "' + $(highlight).text() + '"?');
+                  //return confirm('Do you really want to remove this highlight: "' + $(highlight).text() + '"?');
               },
               onBeforeHighlight: function(range) {
-                  return confirm('Do you really want to highlight this text: "' + range + '"?');
+                  //return confirm('Do you really want to highlight this text: "' + range + '"?');
               },
               onAfterHighlight: function(highlights, range) {
-                  alert('You have selected "' + range + '" and created ' + highlights.length + ' highlight(s)!');
+                  //alert('You have selected "' + range + '" and created ' + highlights.length + ' highlight(s)!');
               }
           });
       });
