--- a/public/javascript/jquery.texthighlighter/demos/callbacks.html
+++ b/public/javascript/jquery.texthighlighter/demos/callbacks.html
@@ -123,5 +123,11 @@
           });
       });
     </script>
+    <style type="text/css">
+* {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none; /* Disable selection/copy in UIWebView */
+}
+</style>
   </body>
 </html>
